# chafan-core

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.json  dev-requirements.txt  env.ci  flake.nix  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: e2e-smoke.yml  main-test.yml  main-test.yml.bak  nix.yml  static_analysis.yml
alembic/: env.py
alembic/versions/: 0144c1da0fe6_add_reward.py  017a2ab5d597_add_is_category.py  021af3771390_add_editor_for_comment.py  0281d8fd326a_update_user_model.py  031d89b0d6ea_add_submission_archive_desc_text.py  055c3cdb6b04_update.py  05c3a952ea62_add_description_editor_field.py  06369b058ac1_update_fields.py  0683eb57352d_add_draft_editor.py  096f816e6921_add_submission_contributors.py  09f028729ac8_add_is_deleted.py  0f8b2edf3460_update_keywords.py  13285c952687_add_feed.py  13401d048f7d_fix_json_model.py  14897e2b7927_add_viewcountsubmission.py  14e2a7adb2c6_add_some_top_flags.py  1541eb7cdb55_add_shard_to_timeline_of_my_comment_.py  1cfd11f59759_update_model.py  1da7e93fd803_add_profession_topics_json.py  1df1637c47e7_add_unsubscription.py  1e95c68901bb_add_submission_archive_description_.py  2149dde81b01_update_user_model.py  25b463cbeb95_update_model.py  2668718cdb60_add_comment_upvotes.py  2d600f126b2a_add_submission_keywords_field.py  3081fd03a6fb_update_answer_upvote_model.py  3142c63f83f5_add_feedback_status_field.py  3325c7bab9af_add_rpeorts.py  36266ab34428_add_uuids.py  37da2a0a005c_payment_model.py  3870f5780e72_add_description_text.py  39bea5109b9e_add_view_count_tables.py  3ad68389b887_add_draft_editor.py  3b7fbbbf91d1_payment_model.py  3b8106237cf3_update_flag.py  3e61d9fd232c_remove_deprecated_fields.py  3f9f62883bbc_update_articles_model.py  4300e970447a_remove_view_counters.py  43be589a3aca_add_subject_user_uuid.py  44b4ccd5cdfc_update_answer_model.py  (+115 more)
chafan_backend_improve_v2/: README.md
chafan_backend_improve_v2/deferred/: README.md  async-migration.md  errormsg-strenum.md  per-site-karma-sort.md  unit-of-work.md  upload-cost-containment.md
chafan_backend_improve_v2/knowledge/: scheduler-status-quo.md
chafan_backend_improve_v2/phase5-optional/: 16a-featured-bonus.md  16b-time-decay.md  16c-concentration-penalty.md  16d-provisional-trust.md  README.md
chafan_backend_improve_v2/proposals/: 00-readme-cleanup.md  01-makefile-cleanup.md  02-password-policy.md  03-grammar-fixes.md  04-scheduled-consolidation.md  05-fake-async-cleanup.md  06-dev-prod-unification.md  07-test-hygiene.md  08-rep-manager-centralization.md  09-adaptive-search-index.md  10-request-logging.md  11-openapi-baseline.md  12-seed-unification.md  13-cache-scope-reduction.md  14-n-plus-one-with-link-preview.md  15-image-upload-r2.md  16-measurement-infra-needed.md
chafan_core/app/: aws.py  aws_ses.py  aws_sns.py  cached_layer.py  coins.py  common.py  config.py  data_broker.py  email_utils.py  endpoint_utils.py  es.py  event_logging.py  feed.py  limiter.py  (+16 more)
docs/: architecture-audit-2026-07-18.md
scripts/: check.py  dramatiq_worker.sh  format-imports.sh  format.sh  initial_data.py  lint.sh  reset_app_state.sh  run-unit-tests.sh  schedule-runner.py  upgrade-db.py
smoke/: .gitignore  README.md  client.py  config.example.json  poll.py  run_all.py  seed.py
(+344 files in other folders)
