[tool.poetry]
name = "chafan-core"
version = "0.1.0"
description = ""
authors = ["Zhen Zhang <git@zhen-zhang.com>"]
packages = [{ include = "chafan_core" }]

[tool.poetry.dependencies]
python = "^3.9.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
fastapi = "^0.65.2"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.8.2"
emails = "^0.5.15"
gunicorn = "^20.0.4"
jinja2 = "^3.0.3"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "1.3.16"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-dotenv = "^0.15.0"
html2text = "^2020.1.16"
Markdown = "^3.3.3"
redis = "^3.5.3"
arrow = "^0.17.0"
boto3 = "^1.16.49"
elasticsearch = "^7.10.1"
pika = "^1.1.0"
parsel = "^1.6.0"
pymongo = "^3.11.2"
sentry-sdk = "^1.5.5"
shortuuid = "^1.0.1"
slowapi = "^0.1.3"
dramatiq = {extras = ["rabbitmq"], version = "^1.10.0"}
jieba = "^0.42.1"
psutil = "^5.8.0"
elastic-apm = "^6.1.1"
aiofiles = "^0.6.0"
websockets = "^9.1"
sentry-dramatiq = "^0.3.2"
influxdb-client = "^1.20.0"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^22.6.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.8.1"
ipython = "^7.31.1"
types-requests = "^2.26.3"
types-redis = "^4.1.2"
types-pytz = "^2021.3.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

