[tool.poetry]
name = "chafan-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.105.0"
jieba = "^0.42.1"
slowapi = "^0.1.8"
pika = "^1.3.2"
redis = "^5.0.1"
alembic = "^1.13.1"
jinja2 = "^3.1.2"
whoosh = "^2.7.4"
sentry-sdk = "^1.39.1"
dramatiq = "^1.15.0"
sentry-dramatiq = "^0.3.3"
pymongo = "^4.6.1"
parsel = "^1.8.1"
boto3 = "^1.34.7"
arrow = "^1.3.0"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
html2text = "^2020.1.16"
markdown = "^3.5.1"
shortuuid = "^1.0.11"
websockets = "^12.0"
pydantic-settings = "^2.1.0"
pytz = "^2023.3.post1"
pydantic = {extras = ["email"], version = "^2.5.3"}
psycopg2 = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.31.0"
python-multipart = "^0.0.6"
emails = "^0.6"
sqlalchemy = {extras = ["mypy"], version = "^2.0.23"}
httpx = "^0.26.0"
bcrypt = "4.0.1"
email-validator = "^2.1.0.post1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pytest = "^7.4.3"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.1.0"
ipython = "^8.19.0"
types-requests = "^2.31.0.10"
types-redis = "^4.6.0.11"
types-pytz = "^2023.3.1.1"
pytest-mock = "^3.12.0"
types-boto3 = "^1.0.2"
types-python-jose = "^3.3.4.8"
types-pika = "^1.2.0b1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
